force-app/main/default/objects/Venue_Contact__c/Venue_Contact__c.object-meta.xml
<CustomObject>
    <label>Venue Contact</label>
    <nameField>
        <displayFormat>VCR - {0000000}</displayFormat>
        <label>Venue Contact Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Venue Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>